# EDRLite-LinuxTelemetryAgent

./: .gitignore  Cargo.toml  build.rs  build.sh  flake.nix  log.md  vmlinux.h
bpf/: some.rs  trial.bpf.c
client/: Cargo.toml
client/src/: main.rs
rules/: file_event_lnx_wget_download_file_in_tmp_dir.yml  lnx_clear_syslog.yml  lnx_file_copy.yml  proc_creation_lnx_base64_decode.yml  proc_creation_lnx_base64_execution.yml  proc_creation_lnx_base64_shebang_cli.yml  proc_creation_lnx_bash_interactive_shell.yml  proc_creation_lnx_chmod_targeting_sensitive_directories.yml  proc_creation_lnx_clear_logs.yml  rule1.yaml
rules/sigma/: rule1.yaml
server/: Cargo.toml  events_in.redb
server/db/: events_in.rs  initialize_db.rs  result_reports.rs
server/src/: config.rs  error.rs  main.rs  telemetry.rs
server/src/db/: events_in.rs  initialize_db.rs  mod.rs
server/src/detect/: mod.rs
server/src/kafka/: consumer.rs  mod.rs  producer.rs
src/: main.rs  spare.rs  trial.skel.rs
src/detect/: edr_detect_rules.rs  mod.rs
src/telemetry/: new.rs
