[package]
name = "edr-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = "4.6.1"
ctrlc = "3.5.2"
libbpf-rs = "0.25"
libc = "0.2.186"
object = "0.39.1"
plain = "0.2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
once_cell="1"
sigma-rust = "0.7.0"
structopt = "0.3.26"
time = "0.3.47"
millisecond = "0.15.12"
tokio = { version = "1.53.1", features = ["full"] }
reqwest = { version = "0.13.4", features = ["json"] }
chrono = "0.4.45"

[build-dependencies]
libbpf-cargo = "0.25"
