[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
axum = "0.8.9"
bincode = { version = "2", features = ["serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.31"
once_cell = "1.21.4"
redb = "4.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sigma-rust = "0.7.0"
thiserror = "2.0.3"
tokio = { version = "1.41.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
